work in progress

--- a/src/main/webapp/WEB-INF/jsp/common/clan-manage-nav.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/clan-manage-nav.jspf
@@ -15,7 +15,7 @@
 
 			<li><a href="/clan/war/teamname/assign">Assign Targets</a></li>
 
-			<li><a href="/clan/war/teamname">Upcoming War</a></li>
+			<li><a href="/clan/war"> War</a></li>
 			
 			<li><a href="/clan/available-players">Available Players</a></li>
 
