--- a/src/main/webapp/WEB-INF/jsp/common/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/footer.jspf
@@ -7,6 +7,14 @@
 	$('#targetDate').datepicker({
 		format : 'dd/mm/yyyy'
 	});
+	
+	$('#startdate').datepicker({
+		format : 'dd/mm/yyyy'
+	});
+	
+	$('#enddate').datepicker({
+		format : 'dd/mm/yyyy'
+	});
 </script>
 
 </body>
